--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap") */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+*{
+    margin: 1px;
+    padding: 0;
+    box-sizing: border-box;
+
+}
+html,body{
+    width:100%;
+    height: 100%;
+    font-family: 'open sans', sans-serif;
+}
